@@ -16,6 +16,7 @@
 	* Improved support for Cygwin, enabled native Windows MIDI and wave audio API.
 	* Improved LCD emulation: when setting standard patches, proper sound group name is shown.
 	* Introduced pause function in MIDI player for convenience.
+	* Introduced a possibility to synchronously record audio output from a synth to a file along while listening.
 	* About window now shows target arch and used version of Qt library.
 
 2014-12-21:
